--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   },
   "homepage": "https://github.com/Adedeji234501/cse-341-project1#readme",
   "dependencies": {
-    "express": "^4.21.2"
+    "body-parser": "^1.20.3",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongodb": "^6.12.0"
   }
 }
